# django-admin-row-actions

./: pyproject.toml
